1999-02-16  David Faure  <faure@kde.org>

	* kfmgui.cpp (showSource): Added option Editor to choose the preferred 
	editor used by Show Document / Frame source. Defaults to kedit.
	Idea from Dawit A.

1999-02-01  David Faure  <faure@kde.org>

	* kfm*: Copy/Paste for text (browser mode) as well as URLs (file
	manager mode). Enabled/Disabled menu items as one would expect.
	(Initial patch from Dawit A.)

1999-01-19  David Faure  <faure@kde.org>

	* kiojob.cpp: Show 'not implemented' when trying to download a remote 
	directory or upload a directory to a remote location.
	
	* kioserver.cpp: Use DirectoryEntries cache for isDir, if nothing better.

1999-01-18  David Faure  <faure@kde.org>

	* kbind.cpp: Open Properties when left-clicking a mimetype file.
	
	* kfmgui.cpp: Reduce bookmark text size if >40. New function in utils.*

1999-01-15  David Faure  <faure@kde.org>

	* kfmgui.cpp: Patch 15 from Michael Reiher :
	Passes the current path to kfind so that it sets
	it as default search path

1999-01-14  David Faure  <faure@kde.org>

	* kfmgui.*: Store bHtmlMode, useful to know which mode we're in.
	Allow Ctrl+Delete for deleting files, improved Ctrl+A handling.

1999-01-13  David Faure  <faure@kde.org>

	* kiojob.cpp: Patch from Waldo Bastian. Now kfm copies/moves
	symlinks as symlinks in local->local copies. It also checks for
 	pipes/sockets/fifo/device files and refuses to copy/move them.

	* kfmman.cpp (openURL): special case for the cache directory :
	save contents of the cache to index.html before opening the URL.

	* kfmgui.cpp (slotClearCache): notify windows showing the cache.

	* kfmexec.*: Let the job finish, don't stop it after the first dir
 	returned. This fixes lots of problems, including opening ftp locations 
	twice from minicli (this used to sigsegv), only one directory 
	displayed instead of all of them, ...
	
	* *: replaced .data() with .copy() after localkdedir, before +=.

1999-01-11  David Faure  <faure@kde.org>
